# USTC-CS-COURSE-HW

./: .gitignore  README.md
ICS/: README.md
人工智能基础/: README.md
体系结构/: README.md
操作系统H实验/: README.md
数字电路实验/: README.md  实验报告模板.md
数据库实验/: README.md
程序设计/: 1.1输出三角形.c  1.2一元二次方程.c  10.1.向无尽的大雨献上花束(雾)-环形链表.c  10.1.向无尽的大雨献上花束(雾)-递归DFS.c  10.1.向无尽的大雨献上花束(雾)-非递归DFS.c  2.1整数商和商.c  2.2圆周长和面积.c  2.3三角形面积.c  2.extra我的名字.c  3.1搜索最长连续数.c  3.2素数输出.c  3.3计算M到N的水仙花数.c  4.1从M到N的回文数.c  4.2计算阶乘后的零的个数.c  4.3两整数求和.c  5.1合法输入串.c  5.2求sin(x)的近似值.c  6.1转圈圈.c  6.2叶氏筛法.c  6.3终极捡钱抓锚Tm.c  7.1内存分配.c  7.2二维池化运算.c  7.3计算组合个数.c  8.1插入字符.c  8.2顺时针打印二维数组.c  8.3最上川-递归DFS.c  8.3最上川-非递归类BFS.c  9.1奇偶排序算法(指针实现).c  9.2分组.c  9.3计算组合个数2.0.c  作业2.1.c  作业2.2.c  作业2.3.c  作业3.1.c  作业3.2.c  作业3.3.c  作业4.1-直接递归.c  作业4.1-边递归边存储.c  作业4.2.c  作业5.1.c  (+11 more)
程序设计二/: README.md  上机0-词典.c  上机1-高精度_快速幂_小数的幂.c  上机2-逆逆波兰数.c  上机3-一教的教室.c  上机4-全排列计数.c  上机4-全排列输出.c  上机4-吃金币.c  上机4-通过oj题目的最大概率.c
算法实验/: README.md
编译原理H/: H10-1_多态重载.md  H10-2_多态重载和中间表示.md  H12_中间表示与中间代码生成.md  H13_运行时空间的组织与中间代码生成.md  H14_循环与代码生成.md  (+10 more)
编译原理实验/pw7/Student/task2/cpp/: CMakeLists.txt  assign_gen.cpp  func_gen.cpp  if_gen.cpp  io_gen.cpp  qsort_gen.cpp  while_gen.cpp
编译原理实验/pw7/Student/task3/: .gitignore  CMakeLists.txt  README.md  main.cpp
编译原理实验/pw7/Student/task3/include/Driver/: driver.h
编译原理实验/pw7/Student/task3/include/IR/: gcd_generator.hpp  qs_generator.hpp
编译原理实验/pw7/Student/task3/include/runtime/: io.h  runtime.h
编译原理实验/pw7/Student/task3/src/Driver/: driver.cpp
编译原理实验/pw7/Student/task3/src/runtime/: io.cpp  runtime.cpp
编译原理实验/pw7/Student/task3/tests/: helloworld.c  quicksort.c  quicksort_1024.in  quicksort_1024.out  quicksort_2048.in  quicksort_2048.out  quicksort_3072.in  quicksort_3072.out  quicksort_4096.in  quicksort_4096.out
(+394 files in other folders)
